k8s/grafana-ingress-mobile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "drone-demo-selfsigned"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.acx.mobile
      secretName: grafana-tls
  rules:
    - host: grafana.acx.mobile
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
